# Anima_Regional_Canvas

./: .gitignore  README.md  nodes.py  pyproject.toml
web/: anima_regional_canvas.js
workflows/: Anima_Regional_Canvas_Test.json  Anima_Regional_Inpaint_Canvas_Test.json
