[project]
name = "anima-regional-canvas"
description = "ANIMA-focused regional canvas node for Anima-LLLite Regional ControlNet workflows in ComfyUI."
version = "1.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/ukr8b3g-cmyk/Anima_Regional_Canvas"
Documentation = "https://github.com/ukr8b3g-cmyk/Anima_Regional_Canvas#readme"
"Bug Tracker" = "https://github.com/ukr8b3g-cmyk/Anima_Regional_Canvas/issues"

[tool.comfy]
PublisherId = "ukr8b3g-cmyk"
DisplayName = "Anima Regional Canvas"
